app/styles/main.css
/* ... */
/**
* Images
----------------------------------------------------------------------
*/

img {
	max-width: 100%;
	height: auto;
	border: 0;
}

figure {
	padding: 0.75em;
	text-align: left;
	position: relative;
	padding-left: 2.75em;
	background: url(../images/icon_bulb.png) no-repeat 0.75em 0.75em;
	background-size: 1.5em auto;
}

figure.doc {
	background: url(../images/icon_doc.png) no-repeat 0.75em 0.75em;
}

.lt-ie9 figure {
	background-image: url(../images/icon_bulb_ie.png);
}

.lt-ie9 figure.doc {
	background-image: url(../images/icon_doc_ie.png);
}

figure img {
	max-width: 75%;
}

figcaption {
	font-style: italic;
	margin-top: 15px;
	margin-top: 0.75rem;
}

/**
* Code blocks
----------------------------------------------------------------------
*/

pre {
	background: #4b565e;
	color: #fefefe;
	padding: 26px;
	padding: 1.33rem;
	font-family: 'Lucida Console', monospace;
	white-space: pre-wrap;
	line-height: 1.33;
	font-size: 0.85em;
}

/**
* Forms
----------------------------------------------------------------------
*/

/*

Uses the format

<form>
	<fieldset>
		<legend></legend>
		<div>
			<label></label>
			--form input / textarea etc--
		</div>
		<div>
			... " ...
		</div>
	</fieldset>
</form>

*/

fieldset {
	padding: 1.33em;
	border: 2px solid #4b565e;
}

legend {
	font-size: 25px;
	font-size: 1.25rem;
	font-style: italic;
	padding: 0 0.5em;
}

legend + div {
	margin-top: 0;
}

form div > * {
	display: block;
}

label {
	line-height: 1;
	font-weight: 600;
}

input, textarea, select {
	font-size: inherit;
	font-family: inherit;
	margin-top: 0.33em;
	line-height: 1.33;
	width: 100%;
	padding: 0.25em;
	border: 2px solid #4b565e;
}

button::-moz-focus-inner,
input::-moz-focus-inner {
	border: 0;
	padding: 0;
}

form p + p {
	margin-top: 0.75em;
	text-indent: 0;
}

input:focus, textarea:focus, select:focus {
	outline: 2px solid #4b565e;
}

option {
	margin-top: 0;
}

input[type="checkbox"], input[type="radio"] {
	width: auto;
	padding: 0;
	border: 0;
	margin-top: 0;
}

label input {
	display: inline-block;
	margin-right: 0.5em;
	vertical-align: baseline;
}

/**
* Buttons
----------------------------------------------------------------------
*/

button, a[role="button"], a[role="button"]:visited, a[role="button"]:hover,
[type="submit"], [type="reset"], #menu {
	background: #00AFB6;
	border: 0;
	color: #fefefe;
	display: inline-block;
	font-size: 1.25em;
	padding: 0.25em 0.5em;
	text-transform: uppercase;
	font-weight: 600;
	cursor: pointer;
	letter-spacing: 2px;
	width: auto;
	font-family: inherit;
}

button:focus, [role="button"]:focus,
[type="submit"]:focus, [type="reset"]:focus {
	outline: none;
	background: #9cd5e2;
}

button:active, [role="button"]:active,
[type="submit"]:active, [type="reset"]:active {
	background: #008489;
	border: 0;
}

ul[role="toolbar"] li {
	list-style: none;
	display: inline-block;
	margin: 0;
}

ul[role="toolbar"] button, ul[role="toolbar"] a {
	margin: 0.25em 0;
}

button[disabled], input[disabled] {
  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=60)";
  filter: alpha(opacity=60);
  -moz-opacity: 0.6;
  opacity: 0.6;
  cursor: default;
}

button[disabled]:hover, button[disabled]:focus,
input[disabled]:hover, input[disabled]:focus {
	opacity: 0.5;
}

section h2 button {
	font-size: 0.6em;
	float: right;
}

/**
* Grid-like helper styles
* For making quasi-columns / adjacent boxes. Example HTML to follow
----------------------------------------------------------------------
*/

/* to remove inline-block white space separating children */
div[class^="group"] {
	font-size: 0;
	text-align: left;
	display: block;
	width: auto !important;
}

div[class^="group"] > * {
	font-size: 20px;
	font-size: 1rem; /* override reset in above rule */
	display: inline-block; /* floats are for losers */
	vertical-align: top;
	margin-top: 0;
}

/* adjacent boxes need gutters. We create this using margin on their direct children  */
div[class^="group"] > * > * {
	margin: 0 0.75em 0 0;
	-moz-box-sizing: border-box;
	-webkit-box-sizing: border-box;
	-o-box-sizing: border-box;
	box-sizing: border-box;
	display: block;
	width: auto !important;
	overflow: hidden;
}
div[class^="group"] > * + * > * { margin: 0 0.75em 0 }
div[class^="group"] > *:last-child > * { margin-right: 0 }

/* One from each of the following sets of three to be placed on the containing div element */

/* Set 1: Horizontal alignment of boxes */
div.group-left { text-align: left }
div.group-center { text-align: center }
div.group-right { text-align: right }

/* Set 2: Vertical alignment of boxes */
div.group-top > * { vertical-align: top }
div.group-middle > * { vertical-align: middle }
div.group-bottom > * { vertical-align: baseline }

/**
* EXAMPLE
* Inline styles are used to define width
*(saves on spawning classes like ".three-fifths" etc)
* Boxes are centered on vertical axis
********************************************

<div class="group-center group-middle">
	<div style="width:50%">
		<div><!-- box content --></div>
	</div>
	<div style="width:30%">
		<div><!-- box content --></div>
	</div>
	<div style="width:20%">
		<div><!-- box content --></div>
	</div>
</div>

*/

/**
* Utilities
----------------------------------------------------------------------
*/

.a11y-hide {
	display: inline-block !important;
	height: 0 !important;
	margin: 0 !important;
	overflow: hidden;
	padding: 0 !important;
	position: absolute !important;
	width: 0 !important;
}

.a11y-hide + * {
	margin-top: 0;
}

.a11y-none {
	display: none;
}

/**
* Collapsable definition items
* Uses the 5k collapse plugin (http://webcloud.se/jQuery-Collapse/)
----------------------------------------------------------------------
*/

.box dt, .box dd {
	display: block;
	text-align: left;
	width: auto;
	padding: 0;
}

.box dt  a {
	padding: 12px 12px;
	background: #00AFB6;
	display: block;
	color: #fefefe;
	font-style: normal;
}

.box dt {
	margin-bottom: 6px;
}

.box dt a:before {
	content:'\25B6';
	padding-right: 0.5em;
}
/* ... */

